--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 <body>
-    <h1>Welcome to My Flask App!</h1>
+    <h1>Phone Tag</h1>
+    <button id="tag"> Tag </button>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
 </html>
