Added some text info to the page, direction

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,5 +12,9 @@
     <h1>Phone Tag</h1>
     <button id="tag"> Tag </button>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <p id="tag_text"> </p>
+    <p id="continuous"> </p>
+    <p id="angle"> </p>
+    <p id="direction"> </p>
 </body>
 </html>
