--- a/templates/index.html
+++ b/templates/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Phonetag</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-    <script src="https://cdn.socket.io/4.7.4/socket.io.min.js" integrity="sha384-Gr6Lu2Ajx28mzwyVR8CFkULdCU7kMlZ9UthllibdOSo6qAiN+yXNHqtgdTvFXMT4" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.socket.io/4.7.4/socket.io.min.js" integrity="sha384-Gr6Lu2Ajx28mzwyVR8CFkULdCU7kMlZ9UthllibdOSo6qAiN+yXNHqtgdTvFXMT4" crossorigin="anonymous"></script> -->
 </head>
 <body>
     <h1>Phone Tag</h1>
     <button id="tag"> Tag </button>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-    <p id="tag_text"> </p>
-    <p id="continuous"> </p>
-    <p id="angle"> </p>
+    <p id="longitude"> </p>
+    <p id="latitude"> </p>
+    <p id="accuracy"> </p>
     <p id="direction"> </p>
 </body>
 </html>
