--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Phone Tag</h1>
     <button id="tag"> Tag </button>
+    <button id="registerButton"> Register </button>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     <p id="tag_text"> </p>
     <p id="continuous"> </p>
